--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=boatShip
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
 server.port=8000
-spring.datasource.url=jdbc:mysql://localhost:3306/tour_booking
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/tour_booking
+spring.datasource.url=${{ MySQL.MYSQL_URL }}
+#mysql://root:ceXumOxIyHMkKaMhBkfyrinBHciSYPSm@mysql.railway.internal:3306/railway
+#spring.datasource.username=root
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
