--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=boatShip
 server.port=8000
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 #spring.datasource.url=jdbc:mysql://localhost:3306/tour_booking
-spring.datasource.url=${{ MySQL.MYSQL_URL }}
-#mysql://root:ceXumOxIyHMkKaMhBkfyrinBHciSYPSm@mysql.railway.internal:3306/railway
 #spring.datasource.username=root
 #spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.main.banner-mode=off
