--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=boatShip
-server.port=8000
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+server.port=8080
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.username=root
+spring.datasource.password=ceXumOxIyHMkKaMhBkfyrinBHciSYPSm
 #spring.datasource.url=jdbc:mysql://localhost:3306/tour_booking
 #spring.datasource.username=root
 #spring.datasource.password=
